<layout>
    
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <FrameLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/AppTheme.AppBarOverlay">
                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorPrimary"
                        app:popupTheme="@style/AppTheme.PopupOverlay" />
                </android.support.design.widget.AppBarLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <!--Common-->
                        <LinearLayout
                            style="@style/AccountEditItemContainer">
                            <TextView
                                android:text="@string/security_manage_category"
                                style="@style/AccountEditLabel" />
                            <Spinner
                                android:id="@+id/security_category"
                                android:spinnerMode="dropdown"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            </Spinner>
                        </LinearLayout>
                        <LinearLayout
                            style="@style/AccountEditItemContainer">
                            <TextView
                                android:text="@string/security_manage_target"
                                style="@style/AccountEditLabel" />
                            <EditText
                                style="@style/AccountEditInputText"
                                android:id="@+id/security_title" />
                        </LinearLayout>
                        <LinearLayout
                            style="@style/AccountEditItemContainer">
                            <TextView
                                android:text="@string/security_password"
                                style="@style/AccountEditLabel" />
                            <EditText
                                style="@style/AccountEditInputText"
                                android:id="@+id/security_password" />
                            <include
                                android:id="@+id/included"
                                layout="@layout/view_password_strength" />
                        </LinearLayout>
                        <LinearLayout
                            style="@style/AccountEditItemContainer">
                            <TextView
                                android:text="@string/security_summary"
                                style="@style/AccountEditLabel" />
                            <EditText
                                android:inputType="textMultiLine|textNoSuggestions|textCapWords"
                                style="@style/AccountEditInputText"
                                android:id="@+id/security_summary" />
                        </LinearLayout>

                        <!--Security Account-->
                        <LinearLayout
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/account_container"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <LinearLayout
                                style="@style/AccountEditItemContainer">
                                <TextView
                                    android:text="@string/security_id"
                                    style="@style/AccountEditLabel" />
                                <EditText
                                    style="@style/AccountEditInputText"
                                    android:id="@+id/account_id" />
                            </LinearLayout>
                        </LinearLayout>

                        <!--Security Credit Card-->
                        <LinearLayout
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/credit_card_container"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <LinearLayout
                                style="@style/AccountEditItemContainer">
                                <TextView
                                    android:text="@string/credit_card_serial"
                                    style="@style/AccountEditLabel" />
                                <EditText
                                    style="@style/AccountEditInputText"
                                    android:id="@+id/credit_card_serial" />
                            </LinearLayout>

                            <LinearLayout
                                style="@style/AccountEditItemContainer">
                                <TextView
                                    android:text="@string/credit_card_cvc"
                                    style="@style/AccountEditLabel" />
                                <EditText
                                    style="@style/AccountEditInputText"
                                    android:id="@+id/credit_card_cvc" />
                            </LinearLayout>

                            <LinearLayout
                                style="@style/AccountEditItemContainer">
                                <TextView
                                    android:text="@string/credit_card_expire_date"
                                    style="@style/AccountEditLabel" />
                                <EditText
                                    style="@style/AccountEditInputText"
                                    android:id="@+id/credit_card_expire_date" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/save"
                app:fabSize="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/spacing_double"
                android:layout_marginEnd="@dimen/spacing_double"
                android:layout_marginRight="@dimen/spacing_double"
                android:src="@drawable/save"
                app:backgroundTint="@color/colorPrimary" />
        </FrameLayout>
    </android.support.design.widget.CoordinatorLayout>    
    
</layout>