<layout>
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
            </android.support.design.widget.AppBarLayout>

            <FrameLayout
                android:id="@+id/main_holder"
                android:padding="@dimen/card_layout_padding"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.v7.widget.CardView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        style="@style/AppCard.SecurityDetail">
                        <ScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <!--Common-->
                                <LinearLayout
                                    style="@style/layout_account_detail_item_container">
                                    <com.simplemobiletools.commons.views.MyTextView
                                        android:text="@string/security_manage_category"
                                        style="@style/text_view_account_detail_label" />
                                    <Spinner
                                        android:id="@+id/security_category"
                                        android:spinnerMode="dropdown"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content">
                                    </Spinner>
                                </LinearLayout>
                                <LinearLayout
                                    style="@style/layout_account_detail_item_container">
                                    <com.simplemobiletools.commons.views.MyTextView
                                        android:text="@string/security_manage_target"
                                        style="@style/text_view_account_detail_label" />
                                    <com.simplemobiletools.commons.views.MyTextView
                                        style="@style/text_view_account_detail_input"
                                        android:id="@+id/security_title" />
                                </LinearLayout>
                                <LinearLayout
                                    style="@style/layout_account_detail_item_container">
                                    <com.simplemobiletools.commons.views.MyTextView
                                        android:text="@string/security_password"
                                        android:layout_gravity="left"
                                        android:layout_width="wrap_content"
                                        style="@style/text_view_account_detail_label" />
                                    <com.simplemobiletools.commons.views.MyTextView
                                        style="@style/text_view_account_detail_input"
                                        android:id="@+id/security_password" />
                                    <include
                                        android:id="@+id/included"
                                        layout="@layout/view_password_strength" />
                                </LinearLayout>
                                <LinearLayout
                                    style="@style/layout_account_detail_item_container">
                                    <com.simplemobiletools.commons.views.MyTextView
                                        android:text="@string/security_summary"
                                        style="@style/text_view_account_detail_label" />
                                    <com.simplemobiletools.commons.views.MyTextView
                                        style="@style/text_view_account_detail_input"
                                        android:id="@+id/security_summary" />
                                </LinearLayout>

                                <!--Security Account-->
                                <LinearLayout
                                    android:id="@+id/account_container"
                                    style="@style/layout_account_detail_item_container">
                                    <com.simplemobiletools.commons.views.MyTextView
                                        android:text="@string/security_id"
                                        style="@style/text_view_account_detail_label" />
                                    <com.simplemobiletools.commons.views.MyTextView
                                        style="@style/text_view_account_detail_input"
                                        android:id="@+id/account_id" />
                                </LinearLayout>

                                <!--Security Credit Card-->
                                <LinearLayout
                                    xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:id="@+id/credit_card_container"
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <LinearLayout
                                        style="@style/layout_account_detail_item_container">
                                        <com.simplemobiletools.commons.views.MyTextView
                                            android:text="@string/credit_card_serial"
                                            style="@style/text_view_account_detail_label" />
                                        <com.simplemobiletools.commons.views.MyTextView
                                            style="@style/text_view_account_detail_input"
                                            android:id="@+id/credit_card_serial" />
                                    </LinearLayout>

                                    <LinearLayout
                                        style="@style/layout_account_detail_item_container">
                                        <com.simplemobiletools.commons.views.MyTextView
                                            android:text="@string/credit_card_cvc"
                                            style="@style/text_view_account_detail_label" />
                                        <com.simplemobiletools.commons.views.MyTextView
                                            style="@style/text_view_account_detail_input"
                                            android:id="@+id/credit_card_cvc" />
                                    </LinearLayout>

                                    <LinearLayout
                                        style="@style/layout_account_detail_item_container">
                                        <com.simplemobiletools.commons.views.MyTextView
                                            android:text="@string/credit_card_expire_date"
                                            style="@style/text_view_account_detail_label" />
                                        <com.simplemobiletools.commons.views.MyTextView
                                            style="@style/text_view_account_detail_input"
                                            android:id="@+id/credit_card_expire_date" />
                                    </LinearLayout>
                                </LinearLayout>
                            </LinearLayout>
                        </ScrollView>
                    </android.support.v7.widget.CardView>
                </RelativeLayout>

                <com.simplemobiletools.commons.views.MyFloatingActionButton
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/update"
                    app:fabSize="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="@dimen/spacing_double"
                    android:layout_marginEnd="@dimen/spacing_double"
                    android:layout_marginRight="@dimen/spacing_double"
                    android:src="@drawable/edit_property"
                    app:backgroundTint="@color/colorPrimary" />
                <ProgressBar
                    android:id="@+id/loading_progress"
                    android:visibility="invisible"
                    android:layout_gravity="center"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
            </FrameLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>